@@ -18,19 +18,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class fuse_args {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_LONG$LAYOUT.withName("argc"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("argv"),
-        Constants$root.C_LONG$LAYOUT.withName("allocated"),
-        MemoryLayout.paddingLayout(32)
-    ).withName("fuse_args");
     public static MemoryLayout $LAYOUT() {
-        return fuse_args.$struct$LAYOUT;
+        return constants$0.const$0;
     }
-    static final VarHandle argc$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("argc"));
     public static VarHandle argc$VH() {
-        return fuse_args.argc$VH;
+        return constants$0.const$1;
     }
     /**
      * Getter for field:
@@ -39,7 +31,7 @@ public class fuse_args {
      * }
      */
     public static int argc$get(MemorySegment seg) {
-        return (int)fuse_args.argc$VH.get(seg);
+        return (int)constants$0.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -48,17 +40,16 @@ public class fuse_args {
      * }
      */
     public static void argc$set(MemorySegment seg, int x) {
-        fuse_args.argc$VH.set(seg, x);
+        constants$0.const$1.set(seg, x);
     }
     public static int argc$get(MemorySegment seg, long index) {
-        return (int)fuse_args.argc$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$0.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void argc$set(MemorySegment seg, long index, int x) {
-        fuse_args.argc$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$0.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle argv$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("argv"));
     public static VarHandle argv$VH() {
-        return fuse_args.argv$VH;
+        return constants$0.const$2;
     }
     /**
      * Getter for field:
@@ -67,7 +58,7 @@ public class fuse_args {
      * }
      */
     public static MemorySegment argv$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)fuse_args.argv$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$0.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -76,17 +67,16 @@ public class fuse_args {
      * }
      */
     public static void argv$set(MemorySegment seg, MemorySegment x) {
-        fuse_args.argv$VH.set(seg, x);
+        constants$0.const$2.set(seg, x);
     }
     public static MemorySegment argv$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)fuse_args.argv$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$0.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void argv$set(MemorySegment seg, long index, MemorySegment x) {
-        fuse_args.argv$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$0.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle allocated$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("allocated"));
     public static VarHandle allocated$VH() {
-        return fuse_args.allocated$VH;
+        return constants$0.const$3;
     }
     /**
      * Getter for field:
@@ -95,7 +85,7 @@ public class fuse_args {
      * }
      */
     public static int allocated$get(MemorySegment seg) {
-        return (int)fuse_args.allocated$VH.get(seg);
+        return (int)constants$0.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -104,20 +94,20 @@ public class fuse_args {
      * }
      */
     public static void allocated$set(MemorySegment seg, int x) {
-        fuse_args.allocated$VH.set(seg, x);
+        constants$0.const$3.set(seg, x);
     }
     public static int allocated$get(MemorySegment seg, long index) {
-        return (int)fuse_args.allocated$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$0.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void allocated$set(MemorySegment seg, long index, int x) {
-        fuse_args.allocated$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$0.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
